# git_explain

./: .gitignore  README.md  build_installer.py  github_repo_analyzer.spec  pyproject.toml
src/: __init__.py  app_launcher.py  config.py  main.py
src/generator/: code_generator.py  llm.py
src/github/: repo.py
src/indexer/: dependencies.py  incremental.py  parser.py  structure.py  vectorizer.py
src/retriever/: faiss_index.py  hybrid_search.py
src/ui/static/css/: dark-mode.css  style.css  visualization.css
src/ui/static/js/: main.js  visualization.js
src/ui/templates/: index.html  visualization.html
src/utils/: __init__.py  gpu_setup.py  progress.py
